--- a/01_project/index.html
+++ b/01_project/index.html
@@ -18,6 +18,7 @@
         <span class="button" id="white"></span>
         <span class="button" id="blue"></span>
         <span class="button" id="yellow"></span>
+        <span class="button" id="green"></span>
         
         <h2>
             Try clicking on one of the colors above
