--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="projects">
             <a class="project-link" href="./01_Background Color Change/index.html">Project 1 - Color Changer 🔥</a>
             <a class="project-link" href="./02_BMI Calculator/index.html">Project 2 - BMI Generator 😒</a>
-            <a class="project-links" href="./03_Digital Clock/index.html">Project 3 - Digital Clock ⌚</a>
+            <a class="project-link" href="./03_Digital Clock/index.html">Project 3 - Digital Clock ⌚</a>
 
         </div>
     </main>
