--- a/04_Guess The Number/index.html
+++ b/04_Guess The Number/index.html
@@ -26,7 +26,7 @@
         <div class="resultParas">
             <p>Pervious Guesses :  <span class="guesses"></span></p>
             <p>Guess Remaining :  <span class="lastResult">10</span></p>
-            <p class="loworhi"></p>
+            <p class="lowOrHi"></p>
         </div>
     </div>
 </body>
