--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <a class="project-link" href="./01_Background Color Change/index.html">Project 1 - Color Changer 🔥</a>
             <a class="project-link" href="./02_BMI Calculator/index.html">Project 2 - BMI Generator 😒</a>
             <a class="project-link" href="./03_Digital Clock/index.html">Project 3 - Digital Clock ⌚</a>
-            <a class="project-link" href="./04_Guess The Number/index.html">Project 3 - Guess the Number 🤔</a>
+            <a class="project-link" href="./04_Guess The Number/index.html">Project 4 - Guess the Number 🤔</a>
+            <a class="project-link" href="./05_keyboard/index.html">Project 5 - Keyboard check 👻 </a>
+            <a class="project-link" href="./06_unlimitedColor/index.html">Project 6 - Unlimited Colors 🧠</a>
         </div>
     </main>
 </body>
